--- a/docs/src/css/custom.css
+++ b/docs/src/css/custom.css
@@ -15,7 +15,9 @@
   --ifm-color-primary-lightest: #3cad6e;
   --ifm-code-font-size: 95%;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
+  --card-shadow: 0 5px 15px #0003;
 }
+
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
 [data-theme='dark'] {
@@ -27,6 +29,7 @@
   --ifm-color-primary-lighter: #32d8b4;
   --ifm-color-primary-lightest: #4fddbf;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
+  --card-shadow: var(--ifm-global-shadow-lw);
 }
 
 .features {
@@ -40,7 +43,7 @@
   height: 100%;
   background-color: var(--ifm-card-background-color);
   border-radius: var(--ifm-card-border-radius);
-  box-shadow: var(--ifm-global-shadow-lw);
+  box-shadow: var(--card-shadow);
   padding: 1.5rem;
   transition: all var(--ifm-transition-fast) ease;
 }
